[package]
name = "querylib"
description = "Rust query language"
version = "0.3.1"
authors = ["lemonxah <lemon.xah@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/lemonxah/querylib"
documentation = "https://docs.rs/querylib/"
repository = "https://github.com/lemonxah/querylib"

[features]
default = []

mongo = ["bson"]
parse = ["lexer"]

[dependencies]
bson = { version = "1.2.0", optional = true }
lexer = { version = "0.1.16", optional = true }